--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
                 />
               </svg>
             </button>
-            <button class="button-violete">
+            <button class="button-violete" id="operation" data-action="devide">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="28"
@@ -100,10 +100,10 @@
                 />
               </svg>
             </button>
-            <button class="button-black">7</button>
-            <button class="button-black">8</button>
-            <button class="button-black">9</button>
-            <button class="button-violete">
+            <button class="button-black" id="number">7</button>
+            <button class="button-black" id="number">8</button>
+            <button class="button-black" id="number">9</button>
+            <button class="button-violete" id="operation" data-action="multiply">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="28"
@@ -125,10 +125,10 @@
                 />
               </svg>
             </button>
-            <button class="button-black">4</button>
-            <button class="button-black">5</button>
-            <button class="button-black">6</button>
-            <button class="button-violete">
+            <button class="button-black" id="number">4</button>
+            <button class="button-black" id="number">5</button>
+            <button class="button-black" id="number">6</button>
+            <button class="button-violete" id="operation" data-action="substraction">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="28"
@@ -144,10 +144,10 @@
                 />
               </svg>
             </button>
-            <button class="button-black">1</button>
-            <button class="button-black">2</button>
-            <button class="button-black">3</button>
-            <button class="button-violete">
+            <button class="button-black" id="number">1</button>
+            <button class="button-black" id="number">2</button>
+            <button class="button-black" id="number">3</button>
+            <button class="button-violete" id="operation" data-action="sum">
               <svg
                 xmlns="http://www.w3.org/2000/svg"
                 width="28"
@@ -203,7 +203,7 @@
                 />
               </svg>
             </button>
-            <button class="button-black">0</button>
+            <button class="button-black number">0</button>
             <button class="button-black">,</button>
             <button class="button-violete">
               <svg
@@ -230,6 +230,6 @@
           </div>
         </div>
       </div>
-    </main>
+    </main><script type="module" src="js/index.js"></script>
   </body>
 </html>
